--- a/ponsol2web/templates/ponsol2web/task_list.html
+++ b/ponsol2web/templates/ponsol2web/task_list.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block content %}
     <div class="page-header">
-        <h1>Predict Result<small></small></h1>
+        <h1>Predict Results<small></small></h1>
     </div>
     {% if count > 0 %}
         <div id="result_list">
