--- a/ponsol2web/templates/ponsol2web/task_detail.html
+++ b/ponsol2web/templates/ponsol2web/task_detail.html
@@ -1,4 +1,5 @@
 {% extends "ponsol2web/base_generic.html" %}
+{% load my_filter %}
 {% block title %} Detail {% endblock %}
 
 {% block content_title %} Result Detail{% endblock %}
@@ -7,20 +8,16 @@
     <div class="page-header">
         <h1>Task Detail<small></small></h1>
     </div>
+    {#    <h3>Task Detail</h3>#}
     <div class="panel panel-default">
         <!-- Default panel contents -->
         <div class="panel-heading">Task Information</div>
         <div class="panel-body">
-            {% if task.status == "running" %}
-                <div class="alert alert-info" role="alert">Running! This task is running now, please wait a moment.
-                </div>
-            {% elif task.status == "finished" %}
-                <div class="alert alert-success" role="alert">Finished! This task is finished, and the result is the
-                    followed.
-                </div>
-            {% elif task.status == "error" %}
-                <div class="alert alert-warning" role="alert">Error! {{ task.error_msg }}</div>            {% endif %}
             <table class="table table-bordered">
+                <tr>
+                    <td>Task ID</td>
+                    <td class="text-capitalize">{{ task.id }}</td>
+                </tr>
                 <tr>
                     <td>Status</td>
                     <td class="text-capitalize">{{ task.status }}</td>
@@ -53,28 +50,84 @@
             </table>
         </div>
 
-        {% if task.record_set.all %}
-            <!-- Table -->
-            <table class="table table-hover">
-                <tr>
-                    <th>#</th>
-                    <th>Protein Name</th>
-                    <th>Substitution</th>
-                    <th>Status</th>
-                    <th>Solubility</th>
-                </tr>
-                {% for record in task.record_set.all %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td><a href="{% url "ponsol2:record-detail" record.id %}">{{ record.name }}</a></td>
-                        <td>{{ record.aa }}</td>
-                        <td class="text-capitalize">{{ record.status }}</td>
-                        <td>{{ record.get_solubility_display }}</td>
-                    </tr>
-                {% endfor %}
+    </div>
+    <div>
+        {% if task.status == "running" %}
+            <div class="alert alert-info" role="alert">Running! This task is running now, please wait a moment.
+            </div>
+        {% elif task.status == "finished" %}
+            <div class="alert alert-success" role="alert">Finished! This task is finished, and the result is the
+                followed.
+            </div>
+        {% elif task.status == "error" %}
+            <div class="alert alert-warning" role="alert">Error! {{ task.error_msg }}</div>            {% endif %}
+    </div>
+    <div>
 
-            </table>
+        {# 分组数据 #}
+        {% if record_group %}
+            {% for record_list in record_group %}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Protein {{ forloop.counter }}:
+                        {% if record_list.0.seq_id %}
+                            {#                            {{ record_list.0.seq_id }} ({{ record_list.0.get_seq_id_type_display }})#}
+                            {{ record_list.0.get_seq_id_type_display }} is {{ record_list.0.seq_id }}
+                        {% else %}
+                            No ID provided
+                        {% endif %}
+                    </div>
+                    <div class="panel-body">
+                        {#                        <p>Protein id:#}
+                        {#                            {% if record_list.0.seq_id %}#}
+                        {#                                {{ record_list.0.seq_id }} ({{ record_list.0.get_seq_id_type_display }})#}
+                        {#                                                                {{ record_list.0.get_seq_id_type_display }} is {{ record_list.0.seq_id }}#}
+                        {#                            {% else %}#}
+                        {#                                Only provide FASTA sequence#}
+                        {#                            {% endif %}#}
+                        {##}
+                        {#                        </p>#}
+                        <p>
+                            Protein name: {{ record_list.0.name | shorten_str }};
+                            Protein sequence: {{ record_list.0.seq | shorten_str }};
+                            <a class="" href="{% url "ponsol2:protein_detail" record_list.0.id %}">Learn more</a>
+                        </p>
+                    </div>
+                    <table class="table">
+                        <tr class="row">
+                            <th class="col-md-1">#</th>
+                            <th class="col-md-3 ">Variation</th>
+                            <th class="col-md-3 ">Predict result</th>
+                            <th class="col-md-5 ">Remark</th>
+                        </tr>
+                        {% for record in record_list %}
+                            <tr class="row">
 
+                                <td> {{ forloop.counter }}</td>
+                                <td>
+                                    <a href="{% url "ponsol2:record-detail" record.id %}"> {{ record.aa }}</a>
+                                </td>
+                                <td>
+                                    {% if record.solubility %}
+                                        {{ record.get_solubility_display }}
+                                        {#                                        {% elif record.status %}#}
+                                    {% else %}
+                                        <span class="text-danger">
+                                                {{ record.status }}
+                                        </span>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if record.error_msg %}
+                                        {{ record.error_msg }}
+                                    {% endif %}
+                                    {#                                    <a href="{% url "ponsol2:record-detail" record.id %}"> see details</a>#}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endfor %}
         {% endif %}
     </div>
 {% endblock %}
