在开完组会后，对页面的布局进行了调整，也添加了文件的例子。

--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -2,8 +2,8 @@
 {% block content %}
     <!-- Jumbotron -->
     <div class="jumbotron">
-        <h1>Wecome to <strong>PON-Sol2</strong></h1>
-        <p class="lead">
+        <h1 class="">Wecome to <strong>PON-Sol2</strong></h1>
+        <p class="lead text-justify">
             Solubility is a central protein property and when reduced can lead to diseases. PON-Sol2 is a prediction
             program to detect amino acid substitutions that increase, decrease or have no effect on the protein
             solubility. The method is based on a gradient boosting algorithm and it has been trained on a large data
@@ -13,7 +13,7 @@
             You can also visit
             <a class=""
                href="http://139.196.42.166:8010/" target="_blank">
-                the mirror website, China.
+                the mirror website on Soochow University, China.
             </a>
         </p>
         <p class="lead">
@@ -51,14 +51,14 @@
                 details »</a></p>
         </div>
     </div>
-    <div class="row text-center" style=" padding: 30px">
-        <h1 class="text-center text-capitalize">How to cite?</h1>
+    <div class="row text-justify" style=" padding: 30px">
+        <h1 class="text-justify text-capitalize">How to cite?</h1>
         <p>
             PON-Sol2 will be published soon.
             <br>
             {#        <a class="btn btn-success btn-xs" href="#" target="_blank"> Go to Bioinformatics </a>#}
         </p>
-        <p>
+        <p class="text-justify">
             {#            PON-Sol (2016), the old version based on Random Forests, has been published Bioinformatics.#}
             {#            <br>#}
             The original PON-Sol was published in
