--- a/ponsol2web/templates/ponsol2web/about.html
+++ b/ponsol2web/templates/ponsol2web/about.html
@@ -7,10 +7,23 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <h2 id="input_example">Mirror website</h2>
-            <ul>
-                <li>China, <a href="http://139.196.42.166:8010/">http://139.196.42.166:8010</a></li>
-            </ul>
+            <h2>Citing PON-Sol</h2>
+            <ol>
+                <li><p>PON-Sol2 was developed by Lianjie Zeng, Yang Yang and Mauno Vihinen. Manuscript describing the
+                    method has been submitted. <span class="label label-success">Waiting...</span></p>
+                </li>
+                <li><p>Citation for the original PON-Sol predictor is: </p>
+                    <p>
+                        Yang Yang, Abhishek Niroula, Bairong Shen, Mauno Vihinen
+                        PON-Sol: prediction of effects of amino
+                            acid
+                            substitutions on protein solubility
+                        Bioinformatics, Volume 32, Issue 13, 1 July 2016, Pages 2032–2034,
+                        <a href='https://doi.org/10.1093/bioinformatics/btw066' target='_blank' class='url'>
+                            https://doi.org/10.1093/bioinformatics/btw066</a>.
+                    </p>
+                </li>
+            </ol>
             <h2 id="input_example">Start prediction</h2>
             <p>
                 To start using PON-Sol2, you just need to provide protein sequence and amino acid substitution
@@ -134,26 +147,16 @@ V2A
                 <a class="btn btn-primary btn-xs text-capitalize" href="{% url "ponsol2:download-dataset-ponsol" %}">
                     <span class="glyphicon glyphicon-download-alt"></span>&nbsp;download</a>
             </p>
+            <h2 id="input_example">Mirror website</h2>
+            <ul>
+                <li>Soochow University, China: <a href="http://139.196.42.166:8010/">http://139.196.42.166:8010</a></li>
+            </ul>
 
-            <h2>Citing PON-Sol</h2>
-            <ol>
-                <li><p>PON-Sol2 was developed by Lianjie Zeng, Yang Yang and Mauno Vihinen. Manuscript describing the method has been submitted. <span class="label label-success">Waiting...</span></p>
-                </li>
-                <li><p>Citation for the original PON-Sol predictor is </p>
-                    <p>Yang Yang, Abhishek Niroula, Bairong Shen, Mauno Vihinen</p>
-                    <p><a href='https://doi.org/10.1093/bioinformatics/btw066'>PON-Sol: prediction of effects of amino
-                        acid
-                        substitutions on protein solubility</a></p>
-                    <p>Bioinformatics, Volume 32, Issue 13, 1 July 2016, Pages 2032–2034, <a
-                            href='https://doi.org/10.1093/bioinformatics/btw066' target='_blank' class='url'>https://doi.org/10.1093/bioinformatics/btw066</a>
-                    </p>
-                </li>
-
-            </ol>
             <h2>Contact</h2>
-            <p>If you have any problems, please contact Lianjie Zeng  (<a href='mailto:1709404010@stu.suda.edu.cn'
+            <p>If you have any problems, please contact Lianjie Zeng (<a href='mailto:1709404010@stu.suda.edu.cn'
                                                                          target='_blank'
-                                                                         class='url'>1709404010@stu.suda.edu.cn</a>).</p>
+                                                                         class='url'>1709404010@stu.suda.edu.cn</a>).
+            </p>
 
         </div>
     </div>
