使用 bulk 创建 record；

--- a/ponsol2web/templates/ponsol2web/email/email.html
+++ b/ponsol2web/templates/ponsol2web/email/email.html
@@ -79,27 +79,30 @@
                     {% endfor %}
                 </table>
             {% endfor %}
-            {% else %}
+        {% else %}
             No valid variation input.
         {% endif %}
         <div>
             <br>
-            <p>If you find that there is no result or some variation have been missed, it is usually due to an incorrect input format. Please check the following:</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;1. See the error message on the page.</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;2. When inputting FASTA sequence(s), the protein name is not provided or the protein name is incorrect.</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;3. When inputting protein ID(s), ID is invalid.</p>
+            <p>
+                If you find that there is no result or some variation have been missed, it is usually due to an
+                incorrect input format.
+                Please check wheather variation can match corresponding FASTA sequence.
+            </p>
         </div>
         <p>
-        <br>You can also go to the Result page of PON-Sol2 website to see more detailed information{{ url }}. <br><br>
+            <br>You can also go to the Result page of PON-Sol2 website to see more detailed information{{ url }}.
+            <br><br>
 
-        Best regards, <br><br>
+            Best regards, <br><br>
 
-        =============================================================================================== <br>
-        Yang Yang (1,2), Lianjie Zeng (1) and Mauno Vihinen (2) <br>
-        1. School of Computer Science and Technology, Soochow University, 215006, China, Town, State, Postcode, Country
-        <br>
-        2. Department of Experimental Medical Science, Lund University, BMC B13, SE-221 84 Lund, Sweden. <br>
-        * If you have any problems, please contact Lianjie Zeng (1709404010@stu.suda.edu.cn). <br>
+            =============================================================================================== <br>
+            Yang Yang (1,2), Lianjie Zeng (1) and Mauno Vihinen (2) <br>
+            1. School of Computer Science and Technology, Soochow University, 215006, China, Town, State, Postcode,
+            Country
+            <br>
+            2. Department of Experimental Medical Science, Lund University, BMC B13, SE-221 84 Lund, Sweden. <br>
+            * If you have any problems, please contact Lianjie Zeng (1709404010@stu.suda.edu.cn). <br>
         </p>
         </div>
 </body>
