lund university logo 改为 png 格式

--- a/ponsol2web/templates/ponsol2web/email/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/email/base_generic.html
@@ -63,7 +63,7 @@
 <div>
     <footer class="footer text-right">
         <img style="height: 50px; margin: 0 20px;" src="{% static "ponsol2web/img/苏大logo.png" %}">
-        <img style="height: 60px; margin: 0 20px;" src="{% static "ponsol2web/img/Lund_university_L_CMYK.svg" %}">
+        <img style="height: 50px; margin: 0 20px;" src="{% static "ponsol2web/img/Lund_university_L_CMYK.png" %}">
     </footer>
 </div>
 </div> <!-- /container -->
