完善邮件、介绍等各方面信息

--- a/ponsol2web/templates/ponsol2web/about.html
+++ b/ponsol2web/templates/ponsol2web/about.html
@@ -16,8 +16,8 @@
                     <p>
                         Yang Yang, Abhishek Niroula, Bairong Shen, Mauno Vihinen
                         PON-Sol: prediction of effects of amino
-                            acid
-                            substitutions on protein solubility
+                        acid
+                        substitutions on protein solubility
                         Bioinformatics, Volume 32, Issue 13, 1 July 2016, Pages 2032–2034,
                         <a href='https://doi.org/10.1093/bioinformatics/btw066' target='_blank' class='url'>
                             https://doi.org/10.1093/bioinformatics/btw066</a>.
@@ -31,6 +31,9 @@
                 or list of IDs( GI, Ensemble ID or UniProt). These data can be written or pasted to the boxes in the
                 input forms or uploaded as a file. Both types allow the submission of variants in multiple queries
                 simultaneously.
+            </p>
+            <p>
+                In protein predict, you can also predict all the 19 possible single substitutions.
             </p>
             <p>
                 To look for an input example, please click the "Example" text on the input page.
@@ -95,6 +98,14 @@ V2A
                 <pre><code>UniProtKB/Swiss-Prot ID
 </code></pre>
             </ol>
+
+            <h3>Protein Predict</h3>
+            <p>
+                Protein predict will predict all the 19 possible single substitutions. Only one protein can be provided
+                at a time. Provide the sequences either in FASTA format or use an ID (GI, Ensemble ID or UniProt). It
+                will take a long time, please be patient and the result will be sent to email.
+            </p>
+
             <h2>Prediction results</h2>
             <p>PON-Sol2 provides results on separate web pages and if e-mail is provided they are mailed to the
                 submitter. For each submission, which is called "Task" and for each amino acid substitution "Record"
