--- a/ponsol2web/templates/ponsol2web/email/task_detail.html
+++ b/ponsol2web/templates/ponsol2web/email/task_detail.html
@@ -31,7 +31,7 @@
                         {##}
                         {#                        </p>#}
                         <p>
-                            Protein name: {{ record_list.0.name | shorten_str }};
+                            Protein name: {{ record_list.0.name | shorten_str }};<br>
                             Protein sequence: {{ record_list.0.seq | shorten_str }};
                         </p>
                     </div>
