admin 添加 input type， pdf 减少超链接

--- a/ponsol2web/templates/ponsol2web/email/task_detail.html
+++ b/ponsol2web/templates/ponsol2web/email/task_detail.html
@@ -47,7 +47,7 @@
 
                                 <td> {{ forloop.counter }}</td>
                                 <td>
-                                    <a href="{% url "ponsol2:record-detail" record.id %}"> {{ record.aa }}</a>
+                                     {{ record.aa }}
                                 </td>
                                 <td>
                                     {% if record.solubility %}
