--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -1,7 +1,7 @@
 {% extends "ponsol2web/base_generic.html" %}
 {% block content %}
     <!-- Jumbotron -->
-    <div class="jumbotron">
+    <div class="jumbotron" style="">
         <h1>Wecome to <strong>PON-Sol2</strong></h1>
         <p class="lead">
             Solubility is a central protein property and when reduced can lead to diseases. We have developed a
@@ -15,9 +15,7 @@
     </div>
 
     <!-- Example row of columns -->
-    <div class="row">
-        <div class="col-lg-4 col-md-4">
-            <h2>Input Format</h2>
+        <div class="row">
         <div class="col-lg-4 col-md-4">
             <h2>Input formats</h2>
             <p>
@@ -26,11 +24,6 @@
             <p><a class="btn btn-primary" href="{% url "ponsol2:about" %}#input_example" role="button">View details
                 »</a></p>
         </div>
-        <div class="col-lg-4 col-md-4">
-            <h2>Dataset</h2>
-            <p>Altogether 11201 amino acid substitutions in 77 proteins are collected. After filtering, 5666 variants
-                are used for training, and 662 variants are used for blind testing. The database is freely available.
-                <a href="{% url "ponsol2:download-dataset-ponsol2" %}"> <span class="glyphicon glyphicon-download-alt"></span></a>
         <div class="col-lg-4 col-md-4">
             <h2>Data sets</h2>
             <p>
@@ -42,7 +35,7 @@
             <p><a class="btn btn-primary" href="{% url "ponsol2:about" %}#dataset" role="button">View details »</a></p>
         </div>
         <div class="col-lg-4 col-md-4">
-            <h2>Predict Result</h2>
+            <h2>Prediction results</h2>
             <p>
                 Result are displayed on the Results page. You can also provide your email, then the results are by
                 email.
@@ -58,7 +51,7 @@
             <br>
             {#        <a class="btn btn-success btn-xs" href="#" target="_blank"> Go to Bioinformatics </a>#}
         </p>
-        <p class="text-justify">
+        <p class="text-center">
             {#            PON-Sol (2016), the old version based on Random Forests, has been published Bioinformatics.#}
             {#            <br>#}
             The original PON-Sol was published in
