--- a/ponsol2web/templates/ponsol2web/dashboard.html
+++ b/ponsol2web/templates/ponsol2web/dashboard.html
@@ -1,9 +1,86 @@
 {% extends "ponsol2web/base_generic.html" %}
 {% load static %}
+{% block title %} Dashboard {% endblock %}
 {% block content %}
-    <div id="line-chart"></div>
+    <div class="page-header">
+        <h1>Dashboard</h1>
+    </div>
+    <div id="task_display">
+        <h3>You submitted 100 times totally! It is more than 70% of all users.</h3>
+        <div id="line_task_count"></div>
+        <div>
+            <div class="col-6">
+                <h4>Distribution of input type</h4>
+                <div class="row">
+                    <div id="pie_task_type" class="col-lg-6">asd</div>
+                    <div class="col-lg-6">
+                        <table class="table">
+                            <tr>
+                                <th>type</th>
+                                <th>count</th>
+                            </tr>
+                            <tr>
+                                <td>ID</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Sequence</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Protein</td>
+                                <td>1</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div>Distribution of task status</div>
+                <div id="line_task_status"></div>
+            </div>
+        </div>
+        <div id="record_display">
+            <div id="line_count_record"></div>
+            <div>
+                <div class="col-lg-6">
+                    <div>Distribution of predict result</div>
+                    <div class="row">
+                        <div class="col-lg-6" id="pie_task_result"></div>
+                        <div class="col-lg-6">
+                            <table class="table">
+                                <tr>
+                                    <th>type</th>
+                                    <th>count</th>
+                                </tr>
+                                <tr>
+                                    <td>ID</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>Sequence</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>Protein</td>
+                                    <td>1</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6" id="line_count_result"></div>
+            </div>
+
+            <div>
+                <div class="col-lg-9" id="bar_aa"></div>
+                <div class="col-lg-3"></div>
+            </div>
+        </div>
+
+
+    </div>
     <script type="text/javascript" src="{% static "ponsol2web/js/g2plot.min.js" %}"></script>
-{#        <script type="text/javascript" src="https://unpkg.com/@antv/g2plot@latest/dist/g2plot.min.js"></script>#}
     <script>
         const {Line} = G2Plot;
         const data = [
